Add additional data, refactoring
