# app/infrastructure/persistence/grpc/handler/addressHandler.go
@@ -10,6 +10,7 @@ import (
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 	"strconv"
+	"strings"
 )
 
 // GRPC-обработчик адресов
@@ -106,37 +107,24 @@ func (h *AddressHandler) GetSuggests(ctx context.Context, request *addressV1.Sim
 			}
 
 			// Формирует объект адреса
-			suggests = append(suggests, &entity.AddressObject{
-				ID:             house.ID,
-				AoGuid:         house.HouseGuid,
-				ParentGuid:     house.AoGuid,
-				FormalName:     house.HouseFullNum,
-				ShortName:      "",
-				AoLevel:        8,
-				OffName:        house.HouseFullNum,
-				Code:           city.Code,
-				RegionCode:     city.RegionCode,
-				PostalCode:     house.PostalCode,
-				Okato:          house.Okato,
-				Oktmo:          house.Oktmo,
-				ActStatus:      city.ActStatus,
-				LiveStatus:     city.LiveStatus,
-				CurrStatus:     city.CurrStatus,
-				StartDate:      house.StartDate,
-				EndDate:        house.EndDate,
-				UpdateDate:     house.UpdateDate,
-				FullName:       house.HouseFullNum,
-				FullAddress:    house.FullAddress,
-				District:       city.District,
-				DistrictType:   city.DistrictType,
-				DistrictFull:   city.DistrictFull,
-				Settlement:     city.Settlement,
-				SettlementType: city.SettlementType,
-				SettlementFull: city.SettlementFull,
-				Street:         city.Street,
-				StreetType:     city.StreetType,
-				StreetFull:     city.StreetFull,
-			})
+			city.ID = house.ID
+			city.AoGuid = house.HouseGuid
+			city.ParentGuid = house.AoGuid
+			city.FormalName = house.HouseFullNum
+			city.ShortName = ""
+			city.AoLevel = 8
+			city.OffName = house.HouseFullNum
+			city.PostalCode = house.PostalCode
+			city.Okato = house.Okato
+			city.Oktmo = house.Oktmo
+			city.StartDate = house.StartDate
+			city.EndDate = house.EndDate
+			city.UpdateDate = house.UpdateDate
+			city.FullName = house.HouseFullNum
+			city.FullAddress = house.FullAddress
+			city.BazisUpdateDate = house.BazisUpdateDate
+
+			suggests = append(suggests, city)
 		}
 	}
 
@@ -160,24 +148,98 @@ func (h *AddressHandler) convertToAddress(addr *entity.AddressObject) *addressV1
 		return nil
 	}
 
-	return &addressV1.Address{
-		ID:             addr.ID,
-		AoGuid:         addr.AoGuid,
-		AoLevel:        strconv.Itoa(addr.AoLevel),
-		FormalName:     addr.FormalName,
-		ParentGuid:     addr.ParentGuid,
-		ShortName:      addr.ShortName,
-		PostalCode:     addr.PostalCode,
-		FullName:       addr.FullName,
-		FullAddress:    addr.FullAddress,
-		District:       addr.District,
-		DistrictType:   addr.DistrictType,
-		DistrictFull:   addr.DistrictFull,
-		Settlement:     addr.Settlement,
-		SettlementType: addr.SettlementType,
-		SettlementFull: addr.SettlementFull,
-		Street:         addr.Street,
-		StreetType:     addr.StreetType,
-		StreetFull:     addr.StreetFull,
+	item := addressV1.Address{
+		ID:                addr.ID,
+		FiasId:            addr.AoGuid,
+		FiasLevel:         strconv.Itoa(addr.AoLevel),
+		ParentFiasId:      addr.ParentGuid,
+		ShortName:         addr.ShortName,
+		FormalName:        addr.FormalName,
+		PostalCode:        addr.PostalCode,
+		FullName:          addr.FullName,
+		FullAddress:       addr.FullAddress,
+		KladrId:           addr.Code,
+		RegionFiasId:      addr.RegionGuid,
+		RegionKladrId:     addr.RegionKladr,
+		Region:            addr.Region,
+		RegionType:        addr.RegionType,
+		RegionFull:        addr.RegionFull,
+		AreaFiasId:        addr.AreaGuid,
+		AreaKladrId:       addr.AreaKladr,
+		Area:              addr.Area,
+		AreaType:          addr.AreaType,
+		AreaFull:          addr.AreaFull,
+		CityFiasId:        addr.CityGuid,
+		CityKladrId:       addr.CityKladr,
+		City:              addr.City,
+		CityType:          addr.CityType,
+		CityFull:          addr.CityFull,
+		SettlementFiasId:  addr.SettlementGuid,
+		SettlementKladrId: addr.SettlementKladr,
+		Settlement:        addr.Settlement,
+		SettlementType:    addr.SettlementType,
+		SettlementFull:    addr.SettlementFull,
+		StreetFiasId:      addr.StreetGuid,
+		StreetKladrId:     addr.StreetKladr,
+		Street:            addr.Street,
+		StreetType:        addr.StreetType,
+		StreetFull:        addr.StreetFull,
+		Okato:             addr.Okato,
+		Oktmo:             addr.Oktmo,
+		UpdatedDate:       addr.BazisUpdateDate,
 	}
+
+	if addr.AoLevel == 8 {
+		item.HouseFiasId = addr.AoGuid
+		item.HouseKladrId = addr.Code
+		item.House = addr.FormalName
+		item.HouseType = addr.ShortName
+		item.HouseFull = addr.FullName
+		item.StreetFiasId = addr.ParentGuid
+	} else if addr.AoLevel == 7 {
+		item.StreetFiasId = addr.AoGuid
+		item.StreetKladrId = addr.Code
+		item.Street = addr.FormalName
+		item.StreetType = addr.ShortName
+		item.StreetFull = addr.FullName
+	} else if addr.AoLevel == 5 || addr.AoLevel == 6 {
+		item.SettlementFiasId = addr.AoGuid
+		item.SettlementKladrId = addr.Code
+		item.Settlement = addr.FormalName
+		item.SettlementType = addr.ShortName
+		item.SettlementFull = addr.FullName
+	} else if addr.AoLevel == 4 {
+		item.CityFiasId = addr.AoGuid
+		item.CityKladrId = addr.Code
+		item.City = addr.FormalName
+		item.CityType = addr.ShortName
+		item.CityFull = addr.FullName
+	} else if addr.AoLevel == 3 {
+		item.AreaFiasId = addr.AoGuid
+		item.AreaKladrId = addr.Code
+		item.Area = addr.FormalName
+		item.AreaType = addr.ShortName
+		item.AreaFull = addr.FullName
+	} else if addr.AoLevel <= 2 {
+		item.RegionFiasId = addr.AoGuid
+		item.RegionKladrId = addr.Code
+		item.Region = addr.FormalName
+		item.RegionType = addr.ShortName
+		item.RegionFull = addr.FullName
+	}
+	if addr.Location != "" {
+		location := strings.Split(addr.Location, ",")
+		if len(location) == 2 {
+			lat, err := strconv.ParseFloat(location[0], 32)
+			if err == nil {
+				item.GeoLat = float32(lat)
+			}
+			lon, err := strconv.ParseFloat(location[1], 32)
+			if err == nil {
+				item.GeoLon = float32(lon)
+			}
+		}
+	}
+
+	return &item
 }
